--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,13 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "utility": "cpp",
-        "valarray": "cpp"
-    }
+        "valarray": "cpp",
+        "memory_resource": "cpp",
+        "rope": "cpp",
+        "slist": "cpp"
+    },
+    "C_Cpp.clang_format_style": "{ BasedOnStyle: Chromium, IndentWidth: 4 }",
+    "codegnuglobal.executable": "${WorkspaceFolder}\\Compiler\\msys32\\usr\\bin\\global.exe",
+    "C_Cpp.errorSquiggles": "Disabled",
+    "git.ignoreLimitWarning": true
 }
